@@ -2,6 +2,9 @@ For a more comprehensive changelog for the latest experimental SVN code, see:
         http://scummvm.sourceforge.net/daily/ChangeLog
 
 0.13.0 (????-??-??)
+ General:
+   - Added MIDI driver for Atari ST / FreeMint.
+
  New Games:
    - Added support for Discworld.
 
